# agri-insurance-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.render  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: main.py
api/routers/: admin.py  events.py  payouts.py  webhooks.py
config/: settings.py
dashboard/: app.py
dashboard/pages/: event_log.py  map_view.py  overview.py  payout_status.py
db/: session.py
db/init_sql/: 01_extensions.sql  02_hypertables.sql  03_indexes.sql
ingestion/: base.py  imd_weather.py  modis_flood.py  modis_ndvi.py  open_meteo.py
payout/: calculator.py  deduplication.py  pipeline.py  upi_client.py
processing/polygon/: zonal_stats.py
processing/raster/: ndvi.py  ndvi_pipeline.py
registry/: models.py
rules/: engine.py  evaluator.py  loader.py  models.py
rules/definitions/: drought_ndvi.yaml  drought_rainfall.yaml  flood_modis.yaml  flood_rainfall.yaml  soil_moisture.yaml
tests/unit/: test_deduplication.py  test_ndvi.py  test_payout_calculator.py  test_rules_engine.py
workers/: celery_app.py
workers/tasks/: dispatch_payout.py  evaluate_rules.py  ingest_ndvi.py  ingest_weather.py
